test/compile_errors/err_impl_eq_body_removed.w
//! expect-check-fail: expected ':' or '{'

trait Show:
    fn show(self: &Self) -> str

type Item {}

impl Show for Item =
    fn show(self: Item) -> str:
        "item"
